Fixed file uppload text overflow

--- a/src/containers/app/App.css
+++ b/src/containers/app/App.css
@@ -3105,11 +3105,17 @@ input[type="file"] {
   border-color: #e5e5e5;
   border: 1px solid #E5E5E5;
   background-color: transparent;
-  display: flex; }
+  display: flex;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre; }
   .input-file-area .input-file-name {
     padding-left: 12px;
     margin: auto 0;
-    font-size: 11px; }
+    font-size: 11px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: pre; }
 
 .contacts-list {
   position: absolute;
